@@ -39,7 +39,8 @@ DOUBLEQUOTE = '"'
 QUOTED_STRING = r'"((?:\\"|[^"])+)"'
 NBDEBUG = 5
 NBDEBUG_LEVEL_NAME = 'nbdebug'
-LOG_LEVELS = 'critical, error, warning, info, debug or ' + NBDEBUG_LEVEL_NAME
+LOG_LEVELS = ('critical', 'error', 'warning', 'info', 'debug',
+                                                NBDEBUG_LEVEL_NAME)
 
 RE_TOKEN_SPLIT = r'\s*"((?:\\"|[^"])+)"\s*|\s*([^ "]+)\s*'     \
                  r'# RE: split a string in tokens, handling quotes'
