@@ -220,6 +220,7 @@ class SimpleCommandsTestCase(ClewnTestCase):
             'enable -- Enable one breakpoint.\n'
             'help -- Print help on the simple commands.\n'
             'interrupt -- Interrupt the execution of the debugged program.\n'
+            'loglevel -- Get or set the pyclewn log level.\n'
             'mapkeys -- Map the pyclewn keys.\n'
             'print -- Print a value.\n'
             'quit -- Quit the current simple session.\n'
@@ -370,6 +371,7 @@ class SimpleCommandsTestCase(ClewnTestCase):
             'enable -- Enable one breakpoint.\n'
             'help -- Print help on the simple commands.\n'
             'interrupt -- Interrupt the execution of the debugged program.\n'
+            'loglevel -- Get or set the pyclewn log level.\n'
             'mapkeys -- Map the pyclewn keys.\n'
             'print -- Print a value.\n'
             'quit -- Quit the current simple session.\n'
